Bug 161054 - ODT: incorrect size of empty lines in a text box
Summary: ODT: incorrect size of empty lines in a text box
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-13 03:14 UTC by Mike Kaganski
Modified: 2024-05-14 03:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A text box with directly set font size, with an empty line (1.80 KB, application/vnd.oasis.opendocument.text)
2024-05-13 03:14 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-05-13 03:14:07 UTC
Created attachment 194097 [details]
A text box with directly set font size, with an empty line

The same problem as in bug 161023, but in ODT files: empty lines in a text box, where font size was set directly, lose that size, and revert to the default size, changing vertical size of the shape.

In the attachment, put cursor into the text box, and check font size of each of the three lines.

In 24.2.0, it shows font size 10 in all three.
In current master, it shows 18 in the second (empty) line, making the overall height larger.

Regression after commit 69ed893087f89d176a5ec4b263ce8d75774be72b (tdf#160253: fix list identifier export decision code, 2024-04-24). The fix for bug 161023 only fixed this problem in non-text documents.
Comment 1 Mike Kaganski 2024-05-13 10:23:09 UTC
https://gerrit.libreoffice.org/c/core/+/167583
Comment 2 Commit Notification 2024-05-14 03:45:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1201d3d6b0457bac30105bf5371c76a4ef69f29a

tdf#161054: drop support of last empty span as paragraph mark format

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.