tdf#161054: drop support of last empty span as paragraph mark format

Commits 6249858a8972aef077e0249bd93cfe8f01bce4d6 (sw: ODT import/export
of DOCX's paragraph marker formatting, 2022-12-19)
and 209dce614c43f63f63f5b42a746665c0ec1cbfe3 (sw: fix ODT import of
paragraph marker formatting, 2022-12-20) introduced support for paragraph
marker formatting in ODF, using an empty trailing span. Later, commit
1a88efa8e02a6d765dab13c7110443bb9e6acecf (tdf#155238: Reimplement how
ListAutoFormat is stored to ODF, 2023-05-11) changed how the data was
stored in ODF. Then, in commit 69ed893087f89d176a5ec4b263ce8d75774be72b
(tdf#160253: fix list identifier export decision code, 2024-04-24), some
remnants of the older "trailing empty spans" were removed, but a code
was added in XMLParaContext::endFastElement, to keep backward compatible
with documents created in the frame between December 2022 and May 2023.

The said compatibility code brings own problems, requiring new hacks
like commit 2ca93eb5df7ddb8641ff7d884a109261c9700aca (tdf#161023: Empty
spans may only define paragraph marks in text documents, 2024-05-13),
and keeping the code would need more hacks on top, e.g. to fix the case
in ODT documents.

Instead, let's bite the bullet, and drop the compatibility with this
initial implementation, because it was only a brief period during which
the documents could be created, which can be affected by this drop. This
makes the code simpler.

A testdoc for testNumberPortionFormat was edited to use the new markup
for the paragraph marks formatting.

Change-Id: I053e72dd1cc2ead83baa6ce7d24c8522b494c8fa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167583
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>